# OVAS

./: AAGaussian.cpp  AAGaussian.h  Analyser3D.cpp  Analyser3D.h  Analyser4D.cpp  Analyser4D.cpp.u1conflict  Analyser4D.h  AreaFeature.cpp  AreaFeature.h  BROWSE  CMakeCache.txt  CMakeLists.txt  CriticalPoint.cpp  CriticalPoint.h  CurvatureFeature.cpp  CurvatureFeature.h  Data.cpp  Data.h  Feature.cpp  Feature.h  FeatureWeights.cpp  FeatureWeights.h  FlyingSaucersVol4D.cpp  FlyingSaucersVol4D.h  FrameBuffer.cpp  FrameBuffer.h  GeoPoint.cpp  GeoPoint.h  GeoSequence.cpp  GeoSequence.h  GeoSphere.cpp  GeoSphere.h  ImplicitVolume4D.cpp  ImplicitVolume4D.h  InfoData.cpp  InfoData.h  InfoSheet.cpp  InfoSheet.h  LoadedVol4D.cpp  LoadedVol4D.h  (+44 more)
data/: dlData.sh  ns_0187_r.dat.ctData
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
sphereData/: spherei1  spherei2  spherei3  spheret1  spheret2  spheret3
